; ModuleID = '/home/carl/AnghaBench/linux/drivers/rpmsg/extr_rpmsg_core.c___register_rpmsg_driver.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/rpmsg/extr_rpmsg_core.c___register_rpmsg_driver.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rpmsg_driver = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { %struct.module*, i32* }
%struct.module = type { i32 }

@rpmsg_bus = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @__register_rpmsg_driver(%struct.rpmsg_driver* %0, %struct.module* %1) #0 {
  %3 = alloca %struct.rpmsg_driver*, align 8
  %4 = alloca %struct.module*, align 8
  store %struct.rpmsg_driver* %0, %struct.rpmsg_driver** %3, align 8
  store %struct.module* %1, %struct.module** %4, align 8
  %5 = load %struct.rpmsg_driver*, %struct.rpmsg_driver** %3, align 8
  %6 = getelementptr inbounds %struct.rpmsg_driver, %struct.rpmsg_driver* %5, i32 0, i32 0
  %7 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %6, i32 0, i32 1
  store i32* @rpmsg_bus, i32** %7, align 8
  %8 = load %struct.module*, %struct.module** %4, align 8
  %9 = load %struct.rpmsg_driver*, %struct.rpmsg_driver** %3, align 8
  %10 = getelementptr inbounds %struct.rpmsg_driver, %struct.rpmsg_driver* %9, i32 0, i32 0
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 0
  store %struct.module* %8, %struct.module** %11, align 8
  %12 = load %struct.rpmsg_driver*, %struct.rpmsg_driver** %3, align 8
  %13 = getelementptr inbounds %struct.rpmsg_driver, %struct.rpmsg_driver* %12, i32 0, i32 0
  %14 = call i32 @driver_register(%struct.TYPE_2__* %13)
  ret i32 %14
}

declare dso_local i32 @driver_register(%struct.TYPE_2__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
